--- a/src/components/measures/measures.scss
+++ b/src/components/measures/measures.scss
@@ -103,40 +103,18 @@
         }
       }
     }
-    // .formula-dropdown {
-    //   position: relative;
-    //   width: 160px;
-    //   height: 22px;
-    //   margin: 0 5px 0 0;
-    //   display: flex;
-    //   flex-direction: row;
-    //   align-items: center;
-
-    //   select {
-    //     appearance: none;
-    //     -webkit-appearance: none;
-    //     width: 100%;
-    //     height: 100%;
-    //     padding: 1px 8px 1px 8px;
-    //     border-radius: 1.5px;
-    //     border: solid 1px #008cba;
-    //     background-color: #dbf6ff;
-    //     font-size: 11px;
-    //     cursor: pointer;
-    //   }
-    //   &::after {
-    //     content: url("../../assets/dropdown-arrow-icon.svg");
-    //     position: absolute;
-    //     right: 0;
-    //     pointer-events: none;
-    //   }
-    // }
   }
 
   #measures-bottom {
     display: flex;
     justify-content: flex-end;
     padding-right: 20px;
+  }
+  #measures-message {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 20px 0 0;
+    font-style: italic;
   }
   label {
     margin-right: 5px;
