feat: Allow "Set items labels" dialog to be moved [SAMPLER-57]
The dialog is now able to be moved via the mouse or touch device.

--- a/src/components/model/variable-setting-modal.scss
+++ b/src/components/model/variable-setting-modal.scss
@@ -20,6 +20,13 @@ $teal-dark: #177991;
     align-items: center;
     justify-content: center;
     color: white;
+    touch-action: none;
+    cursor: grab;
+    user-select: none;
+
+    span {
+      pointer-events: none;
+    }
   }
   .modal-body {
     padding: 12px;
