feat: Move replacement setting to device level [SAMPLER-83]
This moves the replacement setting from the model level down to the per device level.

--- a/src/components/model/device-visibility.scss
+++ b/src/components/model/device-visibility.scss
@@ -22,6 +22,10 @@ $teal-dark: #177991;
         fill: white;
       }
     }
+
+    &.disabled {
+      opacity: 0.4;
+    }
   }
 
   .device-visibility-dialog {
